--- a/resources/scss/hero.scss
+++ b/resources/scss/hero.scss
@@ -1,16 +1,17 @@
 /* intro image and background logo... */
 
 #top-banner {
-  opacity: 0.65;
+  opacity: 0.95;
   z-index: -1; // needed or text goes behind.
   left: 0;
-  top: 0;
+  bottom: 0;
   width: 100%;
   object-fit: cover;
   transform: none; // override media-as-bg scaling
 
-  animation: top-backdrop 6s ease infinite;
-  animation-play-state: paused;
+  // animation: top-backdrop 6s ease infinite;
+  // animation-play-state: paused;
+  animation: fade-in-logo 2.0s ease-in;
 }
 #top-banner:hover {
   animation-play-state: running;
@@ -26,10 +27,10 @@
 }
 
 
-.logo-tolgraven {
+.logo-plutonia {
   background-size: 100%;
-  background-repeat: no-repeat;
-  opacity: 0.09;
+  background-repeat: round;
+  opacity: 0.50;
   border-radius: 38%;
   border: 0.35em solid var(--bg-1); /* hmm gotta make a bit device-dependent */
   box-shadow: 5px 5px 7px 2px var(--box-regular-color-flip);
@@ -43,7 +44,7 @@
     border: 0.35em solid transparent; /* hmm gotta make a bit device-dependent */
   } 90%, 100% {
     border: 0.35em solid var(--bg-1); /* hmm gotta make a bit device-dependent */
-    opacity: 0.10;
+    opacity: 0.90;
     filter: #{'invert() hue-rotate(180deg)'};
   }
 }
