--- a/resources/scss/main-page.scss
+++ b/resources/scss/main-page.scss
@@ -16,9 +16,9 @@
 
 #intro {
   position: relative;
-  max-height: var(--media-width-main);
+  max-height: 100vh;
   border-top: 0;
-  --line-percent: 95%;
+  --line-percent: 130%;
   
   p {
     padding: 0 var(--space-lg);
@@ -26,7 +26,16 @@
   .h-intro {
     position: relative;
     display: inline;
-    white-space: nowrap;
+    white-space: pre-line;
+    font-size: 600%;
+    font-weight: 900;
+
+    .title-line {
+      margin: 0 0 -0.4em 0;
+      &:last-of-type {
+        text-align: left;
+      }
+    }
   }
   
   @keyframes grow-line {
@@ -35,26 +44,30 @@
   }
   @keyframes skew-line {
     0%   { transform: skew(0deg); }
-    100% { transform: skew(-30deg); }
+    100% { transform: skew(-18deg); }
   }
   h1:after {
     content: "";
-    height: 0.3em;
-    background: linear-gradient(to right, rgba(216, 187, 182, 0.63), var(--fg-2) 185%);
+    height: 2.6em;
+    background: linear-gradient(to right, rgba(216, 187, 182, 0.43), var(--fg-2) 185%);
     animation: grow-line 1.2s ease 6.0s,
                skew-line 1.5s ease 7s;
     animation-fill-mode: forwards;
     position: absolute;
-    bottom: 20%;
-    opacity: 50%;
-    left: 0.2em;
+    bottom: 3%;
+    opacity: 30%;
+    left: -20%;
     z-index: -1;
   }
 
   .buttons {
     a {
-      font-size: 0.8rem;
+      font-size: 1.0rem;
     }
+    button {
+      background-color: var(--bg-2);
+    }
+    margin-bottom: var(--space-lg);
   }
 
 }
@@ -178,7 +191,7 @@
   transition: backdrop-filter 0.5s, background 0.5s,
               border-radius 0.5s, transform 0.3s, width 0.2s, height 0.2s, margin 0.2s, padding 0.2s;
   // transition: 0.3s;
-  box-shadow: 1px -0px 17px 3px var(--box-bright-heavy);
+  box-shadow: 1px -0px 17px 3px var(--box-faint-color);
 
   cursor:  pointer;
   
