--- a/resources/scss/footer.scss
+++ b/resources/scss/footer.scss
@@ -6,7 +6,7 @@ footer {
   font-size: 0.85rem;
 
   border-left: var(--line-width) solid var(--line-color); /* connect bottom to main on left side */
-  background: linear-gradient(90deg, var(--bg-2) 75%, var(--bg-1));
+  background: linear-gradient(90deg, var(--bg-4) 75%, var(--main-background));
 
   transition: all var(--header-expand-time) ease;
   z-index: 20;
