--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -63,7 +63,7 @@ body {
   font-family: 'Fira Code', monospace;
   // font-family: 'Fira Sans', sans-serif;
   color: var(--fg-1);
-  background-color: var(--bg-1);
+  background-color: var(--main-background);
   width: calc(100% - 2 * var(--space-edges));
   margin: auto;
 
