--- a/resources/scss/header.scss
+++ b/resources/scss/header.scss
@@ -24,7 +24,7 @@ header {
     /* attempt to cover up manually so can get some nice seethrough blur... */
     position: absolute;
     left: 0; top: 0;
-    background: var(--bg-1);
+    background-color: var(--main-background);
     z-index: 1;
   }
 
@@ -42,7 +42,7 @@ header {
   width: var(--space-sides);
   height: calc(var(--header-height-current) +
                var(--line-width));
-  background-color: var(--bg-1);
+  background-color: var(--main-background);
   z-index: 10;
   transition: all var(--header-expand-time) ease;
 
@@ -289,7 +289,7 @@ menu > nav > .nav-section:last-of-type > .nav-links {
     flex-wrap: nowrap;
     align-items: center;
 
-    background: var(--bg-1);
+    background-color: var(--main-background);
 
     .header-logo-do-flip {
       animation: header-logo-anim 0.6s;
