--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -117,7 +117,7 @@ main { /* dunno purpose of why I choose .main-content... */
 }
 .main-content {
   position: relative;
-  background: var(--bg-0);
+  background-color: var(--main-background);
   > section:first-of-type { /* top section: no upper border */
     border-top: 0;
   }
